--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,3 @@
-body {
-	margin: 0;
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	min-height: 100vh;
-	background-color: #f0f2f5;
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
